# SETR_2

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  makefile
html/: graph_legend.html  index.html
src/: main.c
src/CMDPROC/: CMakeLists.txt  cmdproc.c  cmdproc.h
src/SENSORS/: CMakeLists.txt  sensors.c  sensors.h
test/: testCMDPROC.c
